Sintatico/src/sintaxe.output
Gramática

    0 $accept: program $end

    1 program: declarations
    2        | %empty

    3 declarations: declarations declaration
    4             | declaration

    5 declaration: function
    6            | varDecl PV
    7            | error PV

    8 $@1: %empty

    9 $@2: %empty

   10 function: funcDecl ABRE_P $@1 parameters FECHA_P $@2 ABRE_C moreStmt FECHA_C

   11 $@3: %empty

   12 $@4: %empty

   13 function: error ABRE_P $@3 parameters FECHA_P $@4 ABRE_C moreStmt FECHA_C
   14         | funcDecl ABRE_P FECHA_P ABRE_C moreStmt FECHA_C
   15         | error ABRE_P FECHA_P ABRE_C moreStmt FECHA_C

   16 funcDecl: TIPO ID
   17         | TIPO LIST ID

   18 parameters: parameters VIRG varDecl
   19           | varDecl

   20 moreStmt: moreStmt stmt
   21         | stmt

   22 stmt: oneLineStmt
   23     | multLineStmt

   24 multLineStmt: conditional
   25             | iteration

   26 conditional: IF ABRE_P attribuition FECHA_P bracesStmt
   27            | IF ABRE_P attribuition FECHA_P bracesStmt ELSE bracesStmt
   28            | IF ABRE_P error FECHA_P bracesStmt

   29 bracesStmt: ABRE_C moreStmt FECHA_C
   30           | oneLineStmt

   31 iteration: FOR ABRE_P iteArgs FECHA_P bracesStmt

   32 $@5: %empty

   33 iteration: FOR ABRE_P error $@5 FECHA_P bracesStmt

   34 iteArgs: expIte PV expIte PV expIte

   35 expIte: attribuition
   36       | %empty

   37 oneLineStmt: varDecl PV
   38            | attribuition PV
   39            | io PV
   40            | ret PV
   41            | error

   42 io: ENTRADA ABRE_P ID FECHA_P
   43   | SAIDA ABRE_P attribuition FECHA_P
   44   | SAIDA ABRE_P STRING FECHA_P
   45   | ENTRADA ABRE_P error FECHA_P
   46   | SAIDA ABRE_P error FECHA_P

   47 varDecl: TIPO ID
   48        | TIPO LIST ID

   49 attribuition: ID ATRIB expLogic
   50             | expLogic

   51 expLogic: expLogic LOG_OP_OU andLogic
   52         | andLogic

   53 andLogic: andLogic LOG_OP_E expComp
   54         | expComp

   55 expComp: expComp REL_OP_BAIXA expRel
   56        | expRel

   57 expRel: expRel REL_OP_ALTA expArit
   58       | expArit

   59 expArit: expArit ARIT_OP_MAIS expMul
   60        | expArit ARIT_OP_MENOS expMul
   61        | expMul

   62 expMul: expMul ARIT_OP_ALTA negElement
   63       | negElement

   64 negElement: LOG_OP_NEG expList
   65           | ARIT_OP_MENOS expList
   66           | expList

   67 expList: LIST_OP_UN element
   68        | expList LIST_OP_BIN element
   69        | element

   70 element: ID
   71        | ABRE_P attribuition FECHA_P
   72        | ID ABRE_P arguments FECHA_P
   73        | ID ABRE_P FECHA_P
   74        | CONST_INT
   75        | CONST_FLOAT
   76        | NIL

   77 arguments: arguments VIRG attribuition
   78          | attribuition

   79 ret: RETURN attribuition


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256) 7 13 15 28 33 41 45 46
    IF <tok> (258) 26 27 28
    ELSE <tok> (259) 27
    FOR <tok> (260) 31 33
    RETURN <tok> (261) 79
    TIPO <tok> (262) 16 17 47 48
    LIST <tok> (263) 17 48
    ENTRADA <tok> (264) 42 45
    SAIDA <tok> (265) 43 44 46
    VIRG <tok> (266) 18 77
    PV <tok> (267) 6 7 34 37 38 39 40
    ATRIB <tok> (268) 49
    LOG_OP_OU <tok> (269) 51
    LOG_OP_E <tok> (270) 53
    REL_OP_BAIXA <tok> (271) 55
    REL_OP_ALTA <tok> (272) 57
    LIST_OP_BIN <tok> (273) 68
    LIST_OP_UN <tok> (274) 67
    ARIT_OP_MAIS <tok> (275) 59
    ARIT_OP_MENOS <tok> (276) 60 65
    ARIT_OP_ALTA <tok> (277) 62
    LOG_OP_NEG <tok> (278) 64
    CONST_INT <tok> (279) 74
    CONST_FLOAT <tok> (280) 75
    STRING <tok> (281) 44
    NIL <tok> (282) 76
    ID <tok> (283) 16 17 42 47 48 49 70 72 73
    ABRE_P <tok> (284) 10 13 14 15 26 27 28 31 33 42 43 44 45 46 71 72 73
    FECHA_P <tok> (285) 10 13 14 15 26 27 28 31 33 42 43 44 45 46 71 72 73
    ABRE_C <tok> (286) 10 13 14 15 29
    FECHA_C <tok> (287) 10 13 14 15 29


Não terminais com as regras onde eles aparecem

    $accept (33)
        à esquerda: 0
    program (34)
        à esquerda: 1 2
        à direita: 0
    declarations <no> (35)
        à esquerda: 3 4
        à direita: 1 3
    declaration <no> (36)
        à esquerda: 5 6 7
        à direita: 3 4
    function <no> (37)
        à esquerda: 10 13 14 15
        à direita: 5
    $@1 (38)
        à esquerda: 8
        à direita: 10
    $@2 (39)
        à esquerda: 9
        à direita: 10
    $@3 (40)
        à esquerda: 11
        à direita: 13
    $@4 (41)
        à esquerda: 12
        à direita: 13
    funcDecl <no> (42)
        à esquerda: 16 17
        à direita: 10 14
    parameters <no> (43)
        à esquerda: 18 19
        à direita: 10 13 18
    moreStmt <no> (44)
        à esquerda: 20 21
        à direita: 10 13 14 15 20 29
    stmt <no> (45)
        à esquerda: 22 23
        à direita: 20 21
    multLineStmt <no> (46)
        à esquerda: 24 25
        à direita: 23
    conditional <no> (47)
        à esquerda: 26 27 28
        à direita: 24
    bracesStmt <no> (48)
        à esquerda: 29 30
        à direita: 26 27 28 31 33
    iteration <no> (49)
        à esquerda: 31 33
        à direita: 25
    $@5 (50)
        à esquerda: 32
        à direita: 33
    iteArgs <no> (51)
        à esquerda: 34
        à direita: 31
    expIte <no> (52)
        à esquerda: 35 36
        à direita: 34
    oneLineStmt <no> (53)
        à esquerda: 37 38 39 40 41
        à direita: 22 30
    io <no> (54)
        à esquerda: 42 43 44 45 46
        à direita: 39
    varDecl <no> (55)
        à esquerda: 47 48
        à direita: 6 18 19 37
    attribuition <no> (56)
        à esquerda: 49 50
        à direita: 26 27 35 38 43 71 77 78 79
    expLogic <no> (57)
        à esquerda: 51 52
        à direita: 49 50 51
    andLogic <no> (58)
        à esquerda: 53 54
        à direita: 51 52 53
    expComp <no> (59)
        à esquerda: 55 56
        à direita: 53 54 55
    expRel <no> (60)
        à esquerda: 57 58
        à direita: 55 56 57
    expArit <no> (61)
        à esquerda: 59 60 61
        à direita: 57 58 59 60
    expMul <no> (62)
        à esquerda: 62 63
        à direita: 59 60 61 62
    negElement <no> (63)
        à esquerda: 64 65 66
        à direita: 62 63
    expList <no> (64)
        à esquerda: 67 68 69
        à direita: 64 65 66 68
    element <no> (65)
        à esquerda: 70 71 72 73 74 75 76
        à direita: 67 68 69
    arguments <no> (66)
        à esquerda: 77 78
        à direita: 72 77
    ret <no> (67)
        à esquerda: 79
        à direita: 40


Estado 0

    0 $accept: • program $end

    error  deslocar, e ir ao estado 1
    TIPO   deslocar, e ir ao estado 2

    $end  reduzir usando a regra 2 (program)

    program       ir ao estado 3
    declarations  ir ao estado 4
    declaration   ir ao estado 5
    function      ir ao estado 6
    funcDecl      ir ao estado 7
    varDecl       ir ao estado 8


Estado 1

    7 declaration: error • PV
   13 function: error • ABRE_P $@3 parameters FECHA_P $@4 ABRE_C moreStmt FECHA_C
   15         | error • ABRE_P FECHA_P ABRE_C moreStmt FECHA_C

    PV      deslocar, e ir ao estado 9
    ABRE_P  deslocar, e ir ao estado 10


Estado 2

   16 funcDecl: TIPO • ID
   17         | TIPO • LIST ID
   47 varDecl: TIPO • ID
   48        | TIPO • LIST ID

    LIST  deslocar, e ir ao estado 11
    ID    deslocar, e ir ao estado 12


Estado 3

    0 $accept: program • $end

    $end  deslocar, e ir ao estado 13


Estado 4

    1 program: declarations •
    3 declarations: declarations • declaration

    error  deslocar, e ir ao estado 1
    TIPO   deslocar, e ir ao estado 2

    $end  reduzir usando a regra 1 (program)

    declaration  ir ao estado 14
    function     ir ao estado 6
    funcDecl     ir ao estado 7
    varDecl      ir ao estado 8


Estado 5

    4 declarations: declaration •

    $end   reduzir usando a regra 4 (declarations)
    error  reduzir usando a regra 4 (declarations)
    TIPO   reduzir usando a regra 4 (declarations)


Estado 6

    5 declaration: function •

    $end   reduzir usando a regra 5 (declaration)
    error  reduzir usando a regra 5 (declaration)
    TIPO   reduzir usando a regra 5 (declaration)


Estado 7

   10 function: funcDecl • ABRE_P $@1 parameters FECHA_P $@2 ABRE_C moreStmt FECHA_C
   14         | funcDecl • ABRE_P FECHA_P ABRE_C moreStmt FECHA_C

    ABRE_P  deslocar, e ir ao estado 15


Estado 8

    6 declaration: varDecl • PV

    PV  deslocar, e ir ao estado 16


Estado 9

    7 declaration: error PV •

    $end   reduzir usando a regra 7 (declaration)
    error  reduzir usando a regra 7 (declaration)
    TIPO   reduzir usando a regra 7 (declaration)


Estado 10

   13 function: error ABRE_P • $@3 parameters FECHA_P $@4 ABRE_C moreStmt FECHA_C
   15         | error ABRE_P • FECHA_P ABRE_C moreStmt FECHA_C

    FECHA_P  deslocar, e ir ao estado 17

    TIPO  reduzir usando a regra 11 ($@3)

    $@3  ir ao estado 18


Estado 11

   17 funcDecl: TIPO LIST • ID
   48 varDecl: TIPO LIST • ID

    ID  deslocar, e ir ao estado 19


Estado 12

   16 funcDecl: TIPO ID •
   47 varDecl: TIPO ID •

    PV      reduzir usando a regra 47 (varDecl)
    ABRE_P  reduzir usando a regra 16 (funcDecl)


Estado 13

    0 $accept: program $end •

    $padrão  aceitar


Estado 14

    3 declarations: declarations declaration •

    $end   reduzir usando a regra 3 (declarations)
    error  reduzir usando a regra 3 (declarations)
    TIPO   reduzir usando a regra 3 (declarations)


Estado 15

   10 function: funcDecl ABRE_P • $@1 parameters FECHA_P $@2 ABRE_C moreStmt FECHA_C
   14         | funcDecl ABRE_P • FECHA_P ABRE_C moreStmt FECHA_C

    FECHA_P  deslocar, e ir ao estado 20

    TIPO  reduzir usando a regra 8 ($@1)

    $@1  ir ao estado 21


Estado 16

    6 declaration: varDecl PV •

    $end   reduzir usando a regra 6 (declaration)
    error  reduzir usando a regra 6 (declaration)
    TIPO   reduzir usando a regra 6 (declaration)


Estado 17

   15 function: error ABRE_P FECHA_P • ABRE_C moreStmt FECHA_C

    ABRE_C  deslocar, e ir ao estado 22


Estado 18

   13 function: error ABRE_P $@3 • parameters FECHA_P $@4 ABRE_C moreStmt FECHA_C

    TIPO  deslocar, e ir ao estado 23

    parameters  ir ao estado 24
    varDecl     ir ao estado 25


Estado 19

   17 funcDecl: TIPO LIST ID •
   48 varDecl: TIPO LIST ID •

    PV      reduzir usando a regra 48 (varDecl)
    ABRE_P  reduzir usando a regra 17 (funcDecl)


Estado 20

   14 function: funcDecl ABRE_P FECHA_P • ABRE_C moreStmt FECHA_C

    ABRE_C  deslocar, e ir ao estado 26


Estado 21

   10 function: funcDecl ABRE_P $@1 • parameters FECHA_P $@2 ABRE_C moreStmt FECHA_C

    TIPO  deslocar, e ir ao estado 23

    parameters  ir ao estado 27
    varDecl     ir ao estado 25


Estado 22

   15 function: error ABRE_P FECHA_P ABRE_C • moreStmt FECHA_C

    error          deslocar, e ir ao estado 28
    IF             deslocar, e ir ao estado 29
    FOR            deslocar, e ir ao estado 30
    RETURN         deslocar, e ir ao estado 31
    TIPO           deslocar, e ir ao estado 155
    ENTRADA        deslocar, e ir ao estado 32
    SAIDA          deslocar, e ir ao estado 33
    LIST_OP_UN     deslocar, e ir ao estado 34
    ARIT_OP_MENOS  deslocar, e ir ao estado 35
    LOG_OP_NEG     deslocar, e ir ao estado 36
    CONST_INT      deslocar, e ir ao estado 37
    CONST_FLOAT    deslocar, e ir ao estado 38
    NIL            deslocar, e ir ao estado 39
    ID             deslocar, e ir ao estado 40
    ABRE_P         deslocar, e ir ao estado 41

    moreStmt      ir ao estado 42
    stmt          ir ao estado 43
    multLineStmt  ir ao estado 44
    conditional   ir ao estado 45
    iteration     ir ao estado 46
    oneLineStmt   ir ao estado 47
    io            ir ao estado 48
    varDecl       ir ao estado 49
    attribuition  ir ao estado 50
    expLogic      ir ao estado 51
    andLogic      ir ao estado 52
    expComp       ir ao estado 53
    expRel        ir ao estado 54
    expArit       ir ao estado 55
    expMul        ir ao estado 56
    negElement    ir ao estado 57
    expList       ir ao estado 58
    element       ir ao estado 59
    ret           ir ao estado 60


Estado 23

   47 varDecl: TIPO • ID
   48        | TIPO • LIST ID

    LIST  deslocar, e ir ao estado 61
    ID    deslocar, e ir ao estado 62


Estado 24

   13 function: error ABRE_P $@3 parameters • FECHA_P $@4 ABRE_C moreStmt FECHA_C
   18 parameters: parameters • VIRG varDecl

    VIRG     deslocar, e ir ao estado 63
    FECHA_P  deslocar, e ir ao estado 64


Estado 25

   19 parameters: varDecl •

    VIRG     reduzir usando a regra 19 (parameters)
    FECHA_P  reduzir usando a regra 19 (parameters)


Estado 26

   14 function: funcDecl ABRE_P FECHA_P ABRE_C • moreStmt FECHA_C

    error          deslocar, e ir ao estado 28
    IF             deslocar, e ir ao estado 29
    FOR            deslocar, e ir ao estado 30
    RETURN         deslocar, e ir ao estado 31
    TIPO           deslocar, e ir ao estado 155
    ENTRADA        deslocar, e ir ao estado 32
    SAIDA          deslocar, e ir ao estado 33
    LIST_OP_UN     deslocar, e ir ao estado 34
    ARIT_OP_MENOS  deslocar, e ir ao estado 35
    LOG_OP_NEG     deslocar, e ir ao estado 36
    CONST_INT      deslocar, e ir ao estado 37
    CONST_FLOAT    deslocar, e ir ao estado 38
    NIL            deslocar, e ir ao estado 39
    ID             deslocar, e ir ao estado 40
    ABRE_P         deslocar, e ir ao estado 41

    moreStmt      ir ao estado 65
    stmt          ir ao estado 43
    multLineStmt  ir ao estado 44
    conditional   ir ao estado 45
    iteration     ir ao estado 46
    oneLineStmt   ir ao estado 47
    io            ir ao estado 48
    varDecl       ir ao estado 49
    attribuition  ir ao estado 50
    expLogic      ir ao estado 51
    andLogic      ir ao estado 52
    expComp       ir ao estado 53
    expRel        ir ao estado 54
    expArit       ir ao estado 55
    expMul        ir ao estado 56
    negElement    ir ao estado 57
    expList       ir ao estado 58
    element       ir ao estado 59
    ret           ir ao estado 60


Estado 27

   10 function: funcDecl ABRE_P $@1 parameters • FECHA_P $@2 ABRE_C moreStmt FECHA_C
   18 parameters: parameters • VIRG varDecl

    VIRG     deslocar, e ir ao estado 63
    FECHA_P  deslocar, e ir ao estado 66


Estado 28

   41 oneLineStmt: error •

    error          reduzir usando a regra 41 (oneLineStmt)
    IF             reduzir usando a regra 41 (oneLineStmt)
    FOR            reduzir usando a regra 41 (oneLineStmt)
    RETURN         reduzir usando a regra 41 (oneLineStmt)
    TIPO           reduzir usando a regra 41 (oneLineStmt)
    ENTRADA        reduzir usando a regra 41 (oneLineStmt)
    SAIDA          reduzir usando a regra 41 (oneLineStmt)
    LIST_OP_UN     reduzir usando a regra 41 (oneLineStmt)
    ARIT_OP_MENOS  reduzir usando a regra 41 (oneLineStmt)
    LOG_OP_NEG     reduzir usando a regra 41 (oneLineStmt)
    CONST_INT      reduzir usando a regra 41 (oneLineStmt)
    CONST_FLOAT    reduzir usando a regra 41 (oneLineStmt)
    NIL            reduzir usando a regra 41 (oneLineStmt)
    ID             reduzir usando a regra 41 (oneLineStmt)
    ABRE_P         reduzir usando a regra 41 (oneLineStmt)
    FECHA_C        reduzir usando a regra 41 (oneLineStmt)


Estado 29

   26 conditional: IF • ABRE_P attribuition FECHA_P bracesStmt
   27            | IF • ABRE_P attribuition FECHA_P bracesStmt ELSE bracesStmt
   28            | IF • ABRE_P error FECHA_P bracesStmt

    ABRE_P  deslocar, e ir ao estado 67


Estado 30

   31 iteration: FOR • ABRE_P iteArgs FECHA_P bracesStmt
   33          | FOR • ABRE_P error $@5 FECHA_P bracesStmt

    ABRE_P  deslocar, e ir ao estado 68


Estado 31

   79 ret: RETURN • attribuition

    LIST_OP_UN     deslocar, e ir ao estado 34
    ARIT_OP_MENOS  deslocar, e ir ao estado 35
    LOG_OP_NEG     deslocar, e ir ao estado 36
    CONST_INT      deslocar, e ir ao estado 37
    CONST_FLOAT    deslocar, e ir ao estado 38
    NIL            deslocar, e ir ao estado 39
    ID             deslocar, e ir ao estado 40
    ABRE_P         deslocar, e ir ao estado 41

    attribuition  ir ao estado 69
    expLogic      ir ao estado 51
    andLogic      ir ao estado 52
    expComp       ir ao estado 53
    expRel        ir ao estado 54
    expArit       ir ao estado 55
    expMul        ir ao estado 56
    negElement    ir ao estado 57
    expList       ir ao estado 58
    element       ir ao estado 59


Estado 32

   42 io: ENTRADA • ABRE_P ID FECHA_P
   45   | ENTRADA • ABRE_P error FECHA_P

    ABRE_P  deslocar, e ir ao estado 70


Estado 33

   43 io: SAIDA • ABRE_P attribuition FECHA_P
   44   | SAIDA • ABRE_P STRING FECHA_P
   46   | SAIDA • ABRE_P error FECHA_P

    ABRE_P  deslocar, e ir ao estado 71


Estado 34

   67 expList: LIST_OP_UN • element

    CONST_INT    deslocar, e ir ao estado 37
    CONST_FLOAT  deslocar, e ir ao estado 38
    NIL          deslocar, e ir ao estado 39
    ID           deslocar, e ir ao estado 72
    ABRE_P       deslocar, e ir ao estado 41

    element  ir ao estado 73


Estado 35

   65 negElement: ARIT_OP_MENOS • expList

    LIST_OP_UN   deslocar, e ir ao estado 34
    CONST_INT    deslocar, e ir ao estado 37
    CONST_FLOAT  deslocar, e ir ao estado 38
    NIL          deslocar, e ir ao estado 39
    ID           deslocar, e ir ao estado 72
    ABRE_P       deslocar, e ir ao estado 41

    expList  ir ao estado 74
    element  ir ao estado 59


Estado 36

   64 negElement: LOG_OP_NEG • expList

    LIST_OP_UN   deslocar, e ir ao estado 34
    CONST_INT    deslocar, e ir ao estado 37
    CONST_FLOAT  deslocar, e ir ao estado 38
    NIL          deslocar, e ir ao estado 39
    ID           deslocar, e ir ao estado 72
    ABRE_P       deslocar, e ir ao estado 41

    expList  ir ao estado 75
    element  ir ao estado 59


Estado 37

   74 element: CONST_INT •

    PV             reduzir usando a regra 74 (element)
    LOG_OP_OU      reduzir usando a regra 74 (element)
    LOG_OP_E       reduzir usando a regra 74 (element)
    REL_OP_BAIXA   reduzir usando a regra 74 (element)
    REL_OP_ALTA    reduzir usando a regra 74 (element)
    LIST_OP_BIN    reduzir usando a regra 74 (element)
    ARIT_OP_MAIS   reduzir usando a regra 74 (element)
    ARIT_OP_MENOS  reduzir usando a regra 74 (element)
    ARIT_OP_ALTA   reduzir usando a regra 74 (element)


Estado 38

   75 element: CONST_FLOAT •

    PV             reduzir usando a regra 75 (element)
    LOG_OP_OU      reduzir usando a regra 75 (element)
    LOG_OP_E       reduzir usando a regra 75 (element)
    REL_OP_BAIXA   reduzir usando a regra 75 (element)
    REL_OP_ALTA    reduzir usando a regra 75 (element)
    LIST_OP_BIN    reduzir usando a regra 75 (element)
    ARIT_OP_MAIS   reduzir usando a regra 75 (element)
    ARIT_OP_MENOS  reduzir usando a regra 75 (element)
    ARIT_OP_ALTA   reduzir usando a regra 75 (element)


Estado 39

   76 element: NIL •

    PV             reduzir usando a regra 76 (element)
    LOG_OP_OU      reduzir usando a regra 76 (element)
    LOG_OP_E       reduzir usando a regra 76 (element)
    REL_OP_BAIXA   reduzir usando a regra 76 (element)
    REL_OP_ALTA    reduzir usando a regra 76 (element)
    LIST_OP_BIN    reduzir usando a regra 76 (element)
    ARIT_OP_MAIS   reduzir usando a regra 76 (element)
    ARIT_OP_MENOS  reduzir usando a regra 76 (element)
    ARIT_OP_ALTA   reduzir usando a regra 76 (element)


Estado 40

   49 attribuition: ID • ATRIB expLogic
   70 element: ID •
   72        | ID • ABRE_P arguments FECHA_P
   73        | ID • ABRE_P FECHA_P

    ATRIB   deslocar, e ir ao estado 76
    ABRE_P  deslocar, e ir ao estado 77

    PV             reduzir usando a regra 70 (element)
    LOG_OP_OU      reduzir usando a regra 70 (element)
    LOG_OP_E       reduzir usando a regra 70 (element)
    REL_OP_BAIXA   reduzir usando a regra 70 (element)
    REL_OP_ALTA    reduzir usando a regra 70 (element)
    LIST_OP_BIN    reduzir usando a regra 70 (element)
    ARIT_OP_MAIS   reduzir usando a regra 70 (element)
    ARIT_OP_MENOS  reduzir usando a regra 70 (element)
    ARIT_OP_ALTA   reduzir usando a regra 70 (element)


Estado 41

   71 element: ABRE_P • attribuition FECHA_P

    LIST_OP_UN     deslocar, e ir ao estado 156
    ARIT_OP_MENOS  deslocar, e ir ao estado 157
    LOG_OP_NEG     deslocar, e ir ao estado 158
    CONST_INT      deslocar, e ir ao estado 159
    CONST_FLOAT    deslocar, e ir ao estado 160
    NIL            deslocar, e ir ao estado 161
    ID             deslocar, e ir ao estado 162
    ABRE_P         deslocar, e ir ao estado 163

    attribuition  ir ao estado 78
    expLogic      ir ao estado 164
    andLogic      ir ao estado 165
    expComp       ir ao estado 166
    expRel        ir ao estado 167
    expArit       ir ao estado 168
    expMul        ir ao estado 169
    negElement    ir ao estado 170
    expList       ir ao estado 171
    element       ir ao estado 172


Estado 42

   15 function: error ABRE_P FECHA_P ABRE_C moreStmt • FECHA_C
   20 moreStmt: moreStmt • stmt

    error          deslocar, e ir ao estado 28
    IF             deslocar, e ir ao estado 29
    FOR            deslocar, e ir ao estado 30
    RETURN         deslocar, e ir ao estado 31
    TIPO           deslocar, e ir ao estado 155
    ENTRADA        deslocar, e ir ao estado 32
    SAIDA          deslocar, e ir ao estado 33
    LIST_OP_UN     deslocar, e ir ao estado 34
    ARIT_OP_MENOS  deslocar, e ir ao estado 35
    LOG_OP_NEG     deslocar, e ir ao estado 36
    CONST_INT      deslocar, e ir ao estado 37
    CONST_FLOAT    deslocar, e ir ao estado 38
    NIL            deslocar, e ir ao estado 39
    ID             deslocar, e ir ao estado 40
    ABRE_P         deslocar, e ir ao estado 41
    FECHA_C        deslocar, e ir ao estado 79

    stmt          ir ao estado 80
    multLineStmt  ir ao estado 44
    conditional   ir ao estado 45
    iteration     ir ao estado 46
    oneLineStmt   ir ao estado 47
    io            ir ao estado 48
    varDecl       ir ao estado 49
    attribuition  ir ao estado 50
    expLogic      ir ao estado 51
    andLogic      ir ao estado 52
    expComp       ir ao estado 53
    expRel        ir ao estado 54
    expArit       ir ao estado 55
    expMul        ir ao estado 56
    negElement    ir ao estado 57
    expList       ir ao estado 58
    element       ir ao estado 59
    ret           ir ao estado 60


Estado 43

   21 moreStmt: stmt •

    error          reduzir usando a regra 21 (moreStmt)
    IF             reduzir usando a regra 21 (moreStmt)
    FOR            reduzir usando a regra 21 (moreStmt)
    RETURN         reduzir usando a regra 21 (moreStmt)
    TIPO           reduzir usando a regra 21 (moreStmt)
    ENTRADA        reduzir usando a regra 21 (moreStmt)
    SAIDA          reduzir usando a regra 21 (moreStmt)
    LIST_OP_UN     reduzir usando a regra 21 (moreStmt)
    ARIT_OP_MENOS  reduzir usando a regra 21 (moreStmt)
    LOG_OP_NEG     reduzir usando a regra 21 (moreStmt)
    CONST_INT      reduzir usando a regra 21 (moreStmt)
    CONST_FLOAT    reduzir usando a regra 21 (moreStmt)
    NIL            reduzir usando a regra 21 (moreStmt)
    ID             reduzir usando a regra 21 (moreStmt)
    ABRE_P         reduzir usando a regra 21 (moreStmt)
    FECHA_C        reduzir usando a regra 21 (moreStmt)


Estado 44

   23 stmt: multLineStmt •

    error          reduzir usando a regra 23 (stmt)
    IF             reduzir usando a regra 23 (stmt)
    FOR            reduzir usando a regra 23 (stmt)
    RETURN         reduzir usando a regra 23 (stmt)
    TIPO           reduzir usando a regra 23 (stmt)
    ENTRADA        reduzir usando a regra 23 (stmt)
    SAIDA          reduzir usando a regra 23 (stmt)
    LIST_OP_UN     reduzir usando a regra 23 (stmt)
    ARIT_OP_MENOS  reduzir usando a regra 23 (stmt)
    LOG_OP_NEG     reduzir usando a regra 23 (stmt)
    CONST_INT      reduzir usando a regra 23 (stmt)
    CONST_FLOAT    reduzir usando a regra 23 (stmt)
    NIL            reduzir usando a regra 23 (stmt)
    ID             reduzir usando a regra 23 (stmt)
    ABRE_P         reduzir usando a regra 23 (stmt)
    FECHA_C        reduzir usando a regra 23 (stmt)


Estado 45

   24 multLineStmt: conditional •

    error          reduzir usando a regra 24 (multLineStmt)
    IF             reduzir usando a regra 24 (multLineStmt)
    FOR            reduzir usando a regra 24 (multLineStmt)
    RETURN         reduzir usando a regra 24 (multLineStmt)
    TIPO           reduzir usando a regra 24 (multLineStmt)
    ENTRADA        reduzir usando a regra 24 (multLineStmt)
    SAIDA          reduzir usando a regra 24 (multLineStmt)
    LIST_OP_UN     reduzir usando a regra 24 (multLineStmt)
    ARIT_OP_MENOS  reduzir usando a regra 24 (multLineStmt)
    LOG_OP_NEG     reduzir usando a regra 24 (multLineStmt)
    CONST_INT      reduzir usando a regra 24 (multLineStmt)
    CONST_FLOAT    reduzir usando a regra 24 (multLineStmt)
    NIL            reduzir usando a regra 24 (multLineStmt)
    ID             reduzir usando a regra 24 (multLineStmt)
    ABRE_P         reduzir usando a regra 24 (multLineStmt)
    FECHA_C        reduzir usando a regra 24 (multLineStmt)


Estado 46

   25 multLineStmt: iteration •

    error          reduzir usando a regra 25 (multLineStmt)
    IF             reduzir usando a regra 25 (multLineStmt)
    FOR            reduzir usando a regra 25 (multLineStmt)
    RETURN         reduzir usando a regra 25 (multLineStmt)
    TIPO           reduzir usando a regra 25 (multLineStmt)
    ENTRADA        reduzir usando a regra 25 (multLineStmt)
    SAIDA          reduzir usando a regra 25 (multLineStmt)
    LIST_OP_UN     reduzir usando a regra 25 (multLineStmt)
    ARIT_OP_MENOS  reduzir usando a regra 25 (multLineStmt)
    LOG_OP_NEG     reduzir usando a regra 25 (multLineStmt)
    CONST_INT      reduzir usando a regra 25 (multLineStmt)
    CONST_FLOAT    reduzir usando a regra 25 (multLineStmt)
    NIL            reduzir usando a regra 25 (multLineStmt)
    ID             reduzir usando a regra 25 (multLineStmt)
    ABRE_P         reduzir usando a regra 25 (multLineStmt)
    FECHA_C        reduzir usando a regra 25 (multLineStmt)


Estado 47

   22 stmt: oneLineStmt •

    error          reduzir usando a regra 22 (stmt)
    IF             reduzir usando a regra 22 (stmt)
    FOR            reduzir usando a regra 22 (stmt)
    RETURN         reduzir usando a regra 22 (stmt)
    TIPO           reduzir usando a regra 22 (stmt)
    ENTRADA        reduzir usando a regra 22 (stmt)
    SAIDA          reduzir usando a regra 22 (stmt)
    LIST_OP_UN     reduzir usando a regra 22 (stmt)
    ARIT_OP_MENOS  reduzir usando a regra 22 (stmt)
    LOG_OP_NEG     reduzir usando a regra 22 (stmt)
    CONST_INT      reduzir usando a regra 22 (stmt)
    CONST_FLOAT    reduzir usando a regra 22 (stmt)
    NIL            reduzir usando a regra 22 (stmt)
    ID             reduzir usando a regra 22 (stmt)
    ABRE_P         reduzir usando a regra 22 (stmt)
    FECHA_C        reduzir usando a regra 22 (stmt)


Estado 48

   39 oneLineStmt: io • PV

    PV  deslocar, e ir ao estado 81


Estado 49

   37 oneLineStmt: varDecl • PV

    PV  deslocar, e ir ao estado 82


Estado 50

   38 oneLineStmt: attribuition • PV

    PV  deslocar, e ir ao estado 83


Estado 51

   50 attribuition: expLogic •
   51 expLogic: expLogic • LOG_OP_OU andLogic

    LOG_OP_OU  deslocar, e ir ao estado 84

    PV  reduzir usando a regra 50 (attribuition)


Estado 52

   52 expLogic: andLogic •
   53 andLogic: andLogic • LOG_OP_E expComp

    LOG_OP_E  deslocar, e ir ao estado 85

    PV         reduzir usando a regra 52 (expLogic)
    LOG_OP_OU  reduzir usando a regra 52 (expLogic)


Estado 53

   54 andLogic: expComp •
   55 expComp: expComp • REL_OP_BAIXA expRel

    REL_OP_BAIXA  deslocar, e ir ao estado 86

    PV         reduzir usando a regra 54 (andLogic)
    LOG_OP_OU  reduzir usando a regra 54 (andLogic)
    LOG_OP_E   reduzir usando a regra 54 (andLogic)


Estado 54

   56 expComp: expRel •
   57 expRel: expRel • REL_OP_ALTA expArit

    REL_OP_ALTA  deslocar, e ir ao estado 87

    PV            reduzir usando a regra 56 (expComp)
    LOG_OP_OU     reduzir usando a regra 56 (expComp)
    LOG_OP_E      reduzir usando a regra 56 (expComp)
    REL_OP_BAIXA  reduzir usando a regra 56 (expComp)


Estado 55

   58 expRel: expArit •
   59 expArit: expArit • ARIT_OP_MAIS expMul
   60        | expArit • ARIT_OP_MENOS expMul

    ARIT_OP_MAIS   deslocar, e ir ao estado 88
    ARIT_OP_MENOS  deslocar, e ir ao estado 89

    PV            reduzir usando a regra 58 (expRel)
    LOG_OP_OU     reduzir usando a regra 58 (expRel)
    LOG_OP_E      reduzir usando a regra 58 (expRel)
    REL_OP_BAIXA  reduzir usando a regra 58 (expRel)
    REL_OP_ALTA   reduzir usando a regra 58 (expRel)


Estado 56

   61 expArit: expMul •
   62 expMul: expMul • ARIT_OP_ALTA negElement

    ARIT_OP_ALTA  deslocar, e ir ao estado 90

    PV             reduzir usando a regra 61 (expArit)
    LOG_OP_OU      reduzir usando a regra 61 (expArit)
    LOG_OP_E       reduzir usando a regra 61 (expArit)
    REL_OP_BAIXA   reduzir usando a regra 61 (expArit)
    REL_OP_ALTA    reduzir usando a regra 61 (expArit)
    ARIT_OP_MAIS   reduzir usando a regra 61 (expArit)
    ARIT_OP_MENOS  reduzir usando a regra 61 (expArit)


Estado 57

   63 expMul: negElement •
